// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`middle-comment.yml - yaml-verify 1`] = `
!!str # comment
hello
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!str # comment
hello

`;

exports[`middle-comment.yml - yaml-verify 2`] = `
!!str # comment
hello
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!str # comment
hello

`;

exports[`middle-comment.yml - yaml-verify 3`] = `
!!str # comment
hello
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!str # comment
hello

`;

exports[`middle-comments.yml - yaml-verify 1`] = `
!!str # comment 1
# comment 2
hello
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!str
# comment 1
# comment 2
hello

`;

exports[`middle-comments.yml - yaml-verify 2`] = `
!!str # comment 1
# comment 2
hello
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!str
# comment 1
# comment 2
hello

`;

exports[`middle-comments.yml - yaml-verify 3`] = `
!!str # comment 1
# comment 2
hello
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!str
# comment 1
# comment 2
hello

`;

exports[`multiline.yml - yaml-verify 1`] = `
b:    
  123123123123123123123123123   
       123123123123123123123123123   
         123123123123123123123123123				
    123123123123123123123123123   
      123123123123123123123123123   
  123123123123123123123123123   
            123123123123123123123123123				
         
         123123123123123123123123123   
         
         
         123123123123123123123123123      
         
         
         
         
         123123123123123123123123123  
    
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
b: 123123123123123123123123123
  123123123123123123123123123
  123123123123123123123123123
  123123123123123123123123123
  123123123123123123123123123
  123123123123123123123123123
  123123123123123123123123123

  123123123123123123123123123


  123123123123123123123123123




  123123123123123123123123123

`;

exports[`multiline.yml - yaml-verify 2`] = `
b:    
  123123123123123123123123123   
       123123123123123123123123123   
         123123123123123123123123123				
    123123123123123123123123123   
      123123123123123123123123123   
  123123123123123123123123123   
            123123123123123123123123123				
         
         123123123123123123123123123   
         
         
         123123123123123123123123123      
         
         
         
         
         123123123123123123123123123  
    
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
b:
  123123123123123123123123123 123123123123123123123123123 123123123123123123123123123 123123123123123123123123123 123123123123123123123123123 123123123123123123123123123 123123123123123123123123123

  123123123123123123123123123


  123123123123123123123123123




  123123123123123123123123123

`;

exports[`multiline.yml - yaml-verify 3`] = `
b:    
  123123123123123123123123123   
       123123123123123123123123123   
         123123123123123123123123123				
    123123123123123123123123123   
      123123123123123123123123123   
  123123123123123123123123123   
            123123123123123123123123123				
         
         123123123123123123123123123   
         
         
         123123123123123123123123123      
         
         
         
         
         123123123123123123123123123  
    
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
b: 123123123123123123123123123 123123123123123123123123123
  123123123123123123123123123 123123123123123123123123123
  123123123123123123123123123 123123123123123123123123123
  123123123123123123123123123

  123123123123123123123123123


  123123123123123123123123123




  123123123123123123123123123

`;

exports[`true.yml - yaml-verify 1`] = `
hello
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
hello

`;

exports[`true.yml - yaml-verify 2`] = `
hello
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
hello

`;

exports[`true.yml - yaml-verify 3`] = `
hello
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
hello

`;

exports[`verbatim.yml - yaml-verify 1`] = `
!<hello> hello
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!<hello> hello

`;

exports[`verbatim.yml - yaml-verify 2`] = `
!<hello> hello
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!<hello> hello

`;

exports[`verbatim.yml - yaml-verify 3`] = `
!<hello> hello
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!<hello> hello

`;
